--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*
 
-Template Name: Digital Clock
-Template Url: https://fate92ma.github.io/Digital-Clock
+App Name: Digital Clock
+App Url: https://fate92ma.github.io/Digital-Clock
 Contact Me: fatema131khaled@gmail.com
 
 */
